# cxx-code

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  helloworld.c  helloworld.cxx
libs/c-corelib/: CMakeLists.txt
libs/c-corelib/include/ease/: c-corelib.h
libs/c-corelib/source/: c-corelib.c
source/: lib.c  main.cxx
submodules/: README.md
template/: README.md
tests/: CMakeLists.txt  test.c  test.cxx
